<?xml version="1.0" encoding="utf-8"?>
<!-- Position: Speed-Ring wie auf dem Mainscreen des BikeComputers. Geteilt von MainActivity und NaviActivity (LiveCards). -->
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    style="@style/TB.Card">

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:gravity="center_vertical"
        android:orientation="horizontal">

        <TextView
            style="@style/TB.Eyebrow"
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:layout_weight="1"
            android:text="@string/card_position" />

        <TextView
            android:id="@+id/simChip"
            style="@style/TB.Eyebrow"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginRight="10dp"
            android:background="@drawable/bg_chip"
            android:paddingBottom="3dp"
            android:paddingLeft="9dp"
            android:paddingRight="9dp"
            android:paddingTop="3dp"
            android:text="@string/sim_chip"
            android:textSize="10sp"
            android:visibility="gone" />

        <ImageView
            android:layout_width="16dp"
            android:layout_height="16dp"
            android:importantForAccessibility="no"
            android:src="@drawable/ic_gps" />

        <TextView
            android:id="@+id/gpsAccView"
            style="@style/TB.Caption"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginLeft="5dp"
            android:text="@string/gps_none" />
    </LinearLayout>

    <LinearLayout
        android:baselineAligned="false"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginTop="12dp"
        android:gravity="center_vertical"
        android:orientation="horizontal">

        <FrameLayout
            android:layout_width="152dp"
            android:layout_height="152dp">

            <com.euphi.trailbridge.GappedArcView
                android:id="@+id/speedArc"
                android:layout_width="match_parent"
                android:layout_height="match_parent" />

            <LinearLayout
                android:layout_width="match_parent"
                android:layout_height="match_parent"
                android:gravity="center"
                android:orientation="vertical">

                <TextView
                    android:id="@+id/speedView"
                    style="@style/TB.Number.Hero"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:text="@string/dash"
                    android:textSize="56sp" />

                <TextView
                    style="@style/TB.Caption"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_marginTop="2dp"
                    android:letterSpacing="0.14"
                    android:text="@string/unit_kmh"
                    android:textAllCaps="true"
                    android:textSize="11sp" />
            </LinearLayout>
        </FrameLayout>

        <LinearLayout
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:layout_marginLeft="18dp"
            android:layout_weight="1"
            android:orientation="vertical">

            <LinearLayout style="@style/TB.StatRow">

                <ImageView
                    style="@style/TB.StatIcon"
                    android:src="@drawable/ic_height" />

                <LinearLayout
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_gravity="center_vertical"
                    android:layout_marginLeft="10dp"
                    android:orientation="horizontal">

                    <TextView
                        android:id="@+id/altView"
                        style="@style/TB.StatValue"
                        android:text="@string/dash" />

                    <TextView
                        style="@style/TB.StatUnit"
                        android:text="@string/unit_m" />
                </LinearLayout>
            </LinearLayout>

            <LinearLayout style="@style/TB.StatRow">

                <ImageView
                    style="@style/TB.StatIcon"
                    android:src="@drawable/ic_heart" />

                <LinearLayout
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_gravity="center_vertical"
                    android:layout_marginLeft="10dp"
                    android:orientation="horizontal">

                    <TextView
                        android:id="@+id/hrView"
                        style="@style/TB.StatValue"
                        android:text="@string/dash" />

                    <TextView
                        style="@style/TB.StatUnit"
                        android:text="@string/unit_bpm" />
                </LinearLayout>
            </LinearLayout>

            <LinearLayout style="@style/TB.StatRow">

                <ImageView
                    style="@style/TB.StatIcon"
                    android:src="@drawable/ic_cadence" />

                <LinearLayout
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_gravity="center_vertical"
                    android:layout_marginLeft="10dp"
                    android:orientation="horizontal">

                    <TextView
                        android:id="@+id/cadView"
                        style="@style/TB.StatValue"
                        android:text="@string/dash" />

                    <TextView
                        style="@style/TB.StatUnit"
                        android:text="@string/unit_rpm" />
                </LinearLayout>
            </LinearLayout>
        </LinearLayout>
    </LinearLayout>
</LinearLayout>
